--- a/docs/_downloads/e51be5516004e14db400b01daedd9184/plot_blender_01.ipynb
+++ b/docs/_downloads/e51be5516004e14db400b01daedd9184/plot_blender_01.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Blender with single input\n\nExample using ``Blender`` works with data collected from a single sources.\n"
+        "\n# Blender with single input\n\nExample using ``Blender`` with data collected from a single sources.\n"
       ]
     },
     {
