--- a/docs/_downloads/fa4255c6965ba343c22f857ddb6e4c50/plot_blender_02.ipynb
+++ b/docs/_downloads/fa4255c6965ba343c22f857ddb6e4c50/plot_blender_02.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Blender with multiple inputs\n\nExample using ``Blender`` works with data collected from several sources.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>Each data source has a different ``BlenderTemplate``.</p></div>\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>In many scenarios the data collection is performed using\n          Microsoft Excel where different worksheets are used to record\n          for different types of data (e.g. examination, laboratory, pcr, ...).\n          These data, when loaded with pandas, is returned in a dictionary\n          that can be directly inputted to ``Blender``.</p></div>\n"
+        "\n# Blender with multiple inputs\n\nExample using ``Blender`` with data collected from several sources.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>Each data source has a different ``BlenderTemplate``.</p></div>\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>``Pandas`` reads xlsx files with different sheets as a dictionary\n          where the key is the worksheet name and the value is the\n          dataframe. Therefore, xlsx files loaded with pandas can be\n          inputed to ``Blender`` as in the example below.</p></div>\n"
       ]
     },
     {
