--- a/docs/_downloads/85386c99d0cc912545d701230833d44b/plot_stack.ipynb
+++ b/docs/_downloads/85386c99d0cc912545d701230833d44b/plot_stack.ipynb
@@ -19,13 +19,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "First of all, we need to import the modules and functions that will be used\nImport\n\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -33,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n\n# DataBlend library\nfrom datablend.core.blend import BlenderTemplate\nfrom datablend.core.widgets import RenameWidget\nfrom datablend.core.widgets import StackWidget\n\n# ------------------------\n# Constants\n# ------------------------\n# Template\ntemplate = [\n    # Example rename widget\n    {'from_name': 'StudyNo', 'to_name': 'study_number'},\n    {'from_name': 'DateEnrol', 'to_name': 'date_enrolment'},\n    {'from_name': 'Sex', 'to_name': 'gender', 'timestamp': 'date_enrolment'},\n    #{'from_name': 'Age', 'to_name': 'age', 'timestamp': 'date_enrolment'},\n    {'from_name': 'Tmp', 'to_name': 'body_temperature', 'timestamp': 'date_enrolment', 'unit': 'celsius'}\n]\n\n# Data\ndata = [\n    {'StudyNo': '32dx-001', 'DateEnrol': '2020/12/01', 'Sex': 1, 'Tmp': 37.5},\n    {'StudyNo': '32dx-002', 'DateEnrol': '2020/12/04', 'Sex': 2, 'Tmp': 36.8},\n    {'StudyNo': '32dx-003', 'DateEnrol': '2020/12/08', 'Sex': 1, 'Tmp': 39.2},\n    {'StudyNo': '32dx-004', 'DateEnrol': '2020/12/11', 'Sex': 1},\n]\n\n# Blender template\nbt = BlenderTemplate().fit(template)\n\n# Create data\ndata = pd.DataFrame(data)\n\n# Create widgets and transform\ntrans = RenameWidget().fit_transform(bt, data)\n\n# Stack data\nstack = StackWidget(index=['study_number']).fit_transform(bt, trans)\n\n# Show\nprint(\"\\nOriginal:\")\nprint(data)\nprint(\"\\nTransformed:\")\nprint(trans)\nprint(\"\\nStack:\")\nprint(stack)"
+        "# Import\nimport pandas as pd\n\n# DataBlend library\nfrom datablend.core.blend import BlenderTemplate\nfrom datablend.core.widgets.format import RenameWidget\nfrom datablend.core.widgets.stack import StackWidget\n\n# ------------------------\n# Constants\n# ------------------------\n# Template\ntemplate = [\n    # Example rename widget\n    {'from_name': 'StudyNo', 'to_name': 'study_number'},\n    {'from_name': 'DateEnrol', 'to_name': 'date_enrolment'},\n    {'from_name': 'Sex', 'to_name': 'gender', 'timestamp': 'date_enrolment'},\n    {'from_name': 'Tmp', 'to_name': 'body_temperature',\n        'timestamp': 'date_enrolment', 'unit': 'celsius'}\n]\n\n# Data\ndata = [\n    {'StudyNo': '32dx-001', 'DateEnrol': '2020/12/01', 'Sex': 1, 'Tmp': 37.5},\n    {'StudyNo': '32dx-002', 'DateEnrol': '2020/12/04', 'Sex': 2, 'Tmp': 36.8},\n    {'StudyNo': '32dx-003', 'DateEnrol': '2020/12/08', 'Sex': 1, 'Tmp': 39.2},\n    {'StudyNo': '32dx-004', 'DateEnrol': '2020/12/11', 'Sex': 1},\n]\n\n# Blender template\nbt = BlenderTemplate().fit(template)\n\n# Create data\ndata = pd.DataFrame(data)\n\n# Create widgets and transform\ntrans = RenameWidget().fit_transform(bt, data)\n\n# Stack data\nstack = StackWidget(index=['study_number']).fit_transform(bt, trans)\n\n# Show\nprint(\"\\nOriginal:\")\nprint(data)\nprint(\"\\nTransformed:\")\nprint(trans)\nprint(\"\\nStack:\")\nprint(stack)"
       ]
     }
   ],
