--- a/docs/_downloads/afaec746fd82a434131b16987a85ba78/plot_events.ipynb
+++ b/docs/_downloads/afaec746fd82a434131b16987a85ba78/plot_events.ipynb
@@ -19,13 +19,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "First of all, we need to import the modules and functions that will be used\nImport\n\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -33,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n\n# DataBlend library\nfrom datablend.core.blend import BlenderTemplate\nfrom datablend.core.widgets import RenameWidget\nfrom datablend.core.widgets import DateFromStudyDayWidget\nfrom datablend.core.widgets import EventWidget\n\n# ------------------------\n# Constants\n# ------------------------\n# Template\ntemplate = [\n    # Example rename widget\n    {'from_name': 'StudyNo', 'to_name': 'study_number'},\n    {'from_name': 'LabStudyDay', 'to_name': 'lab_study_day'},\n\n    # Example event\n    {'from_name': 'DateEnrol',\n     'to_name': 'date_enrolment',\n     'event': 'event_enrolment'},\n\n    # Example date from study day widget and event\n    {'from_name': None,\n     'to_name': 'date_laboratory',\n     'study_day_col': 'lab_study_day',\n     'study_day_ref': 'date_enrolment',\n     'event': 'event_lab'},\n]\n\n# Data\ndata = [\n    {'StudyNo': '32dx-001', 'DateEnrol': '2020/12/01', 'LabStudyDay': 1},\n    {'StudyNo': '32dx-002', 'DateEnrol': '2020/12/04', 'LabStudyDay': 5},\n    {'StudyNo': '32dx-003', 'DateEnrol': '2020/12/08', 'LabStudyDay': 0},\n    {'StudyNo': '32dx-004', 'DateEnrol': '2020/12/11', 'LabStudyDay': 10},\n    {'StudyNo': '32dx-005', 'LabStudyDay': 3},\n    {'StudyNo': '32dx-005', 'DateEnrol': '2020/12/07'}\n]\n\n# Blender template\nbt = BlenderTemplate().fit(template)\n\n# Create data\ndata = pd.DataFrame(data)\n\n# Create widgets and transform\ntrans = RenameWidget().fit_transform(bt, data)\ntrans = DateFromStudyDayWidget().fit_transform(bt, trans)\ntrans = EventWidget().fit_transform(bt, trans)\n\n# Show\nprint(\"\\nOriginal:\")\nprint(data)\nprint(\"\\nTransformed:\")\nprint(trans)"
+        "# Import\nimport pandas as pd\n\n# DataBlend library\nfrom datablend.core.blend import BlenderTemplate\nfrom datablend.core.widgets.format import RenameWidget\nfrom datablend.core.widgets.format import EventWidget\n\n# ------------------------\n# Constants\n# ------------------------\n# Template\ntemplate = [\n    # Example rename widget\n    {'from_name': 'StudyNo', 'to_name': 'study_number'},\n    {'from_name': 'LabStudyDay', 'to_name': 'lab_study_day'},\n\n    # Example event\n    {'from_name': 'DateEnrol',\n     'to_name': 'date_enrolment',\n     'event': 'event_enrolment'},\n]\n\n# Data\ndata = [\n    {'StudyNo': '32dx-001', 'DateEnrol': '2020/12/01', 'LabStudyDay': 1},\n    {'StudyNo': '32dx-002', 'DateEnrol': '2020/12/04', 'LabStudyDay': 5},\n    {'StudyNo': '32dx-003', 'DateEnrol': '2020/12/08', 'LabStudyDay': 0},\n    {'StudyNo': '32dx-004', 'DateEnrol': '2020/12/11', 'LabStudyDay': 10},\n    {'StudyNo': '32dx-005', 'LabStudyDay': 3},\n    {'StudyNo': '32dx-005', 'DateEnrol': '2020/12/07'}\n]\n\n# Blender template\nbt = BlenderTemplate().fit(template)\n\n# Create data\ndata = pd.DataFrame(data)\n\n# Create widgets and transform\ntrans = RenameWidget().fit_transform(bt, data)\nprint(trans)\ntrans = EventWidget().fit_transform(bt, trans)\n\n# Show\nprint(\"\\nOriginal:\")\nprint(data)\nprint(\"\\nTransformed:\")\nprint(trans)"
       ]
     }
   ],
