--- a/docs/_downloads/a4fd2979e91329f580af940a30f0adde/plot_replace.ipynb
+++ b/docs/_downloads/a4fd2979e91329f580af940a30f0adde/plot_replace.ipynb
@@ -19,13 +19,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "First of all, we need to import the modules and functions that will be used\nImport\n\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -33,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n\n# DataBlend library\nfrom datablend.core.blend import BlenderTemplate\nfrom datablend.core.widgets import RenameWidget\nfrom datablend.core.widgets import ReplaceWidget\n\n# ------------------------\n# Constants\n# ------------------------\n# Template\ntemplate = [\n    # Example rename widget\n    {'from_name': 'StudyNo', 'to_name': 'study_number'},\n    {'from_name': 'Temp', 'to_name': 'body_temperature'},\n    {'from_name': 'Shock', 'to_name': 'shock'},\n    {'from_name': 'Sex', 'to_name': 'gender',\n     'to_replace': \"{'Male': 1, 'Female': 2}\"}\n]\n\n# Data\ndata = [\n    {'StudyNo': '32dx-001', 'Temp': 37.2, 'Shock': False, 'Sex': 1},\n    {'StudyNo': '32dx-002', 'Temp': 36.5, 'Shock': False, 'Sex': 1},\n    {'StudyNo': '32dx-003', 'Temp': 39.8, 'Shock': True, 'Sex': 2},\n    {'StudyNo': '32dx-004', 'Temp': 37.4, 'Shock': False, 'Sex': 1}\n]\n\n# Blender template\nbt = BlenderTemplate().fit(template)\n\n# Create data\ndata = pd.DataFrame(data)\n\n# Create widgets and transform\ntrans = RenameWidget().fit_transform(bt, data)\ntrans = ReplaceWidget().fit_transform(bt, trans)\n\n# Show\nprint(\"\\nOriginal:\")\nprint(data)\nprint(\"\\nTransformed:\")\nprint(trans)"
+        "# Import\nimport pandas as pd\n\n# DataBlend library\nfrom datablend.core.blend import BlenderTemplate\nfrom datablend.core.widgets.format import ReplaceWidget\n\n# ------------------------\n# Constants\n# ------------------------\n# Template\ntemplate = [\n    # Example rename widget\n    {'from_name': 'StudyNo', 'to_name': 'study_number'},\n    {'from_name': 'Temp', 'to_name': 'body_temperature'},\n    {'from_name': 'Shock', 'to_name': 'shock'},\n    {'from_name': 'Sex', 'to_name': 'gender',\n     'to_replace': \"{'Male': 1, 'Female': 2, 'Unknown': 8}\"}\n]\n\n# Data\ndata = [\n    {'StudyNo': '32dx-001', 'Temp': 37.2, 'Shock': False, 'Sex': 1},\n    {'StudyNo': '32dx-002', 'Temp': 36.5, 'Shock': False, 'Sex': 1},\n    {'StudyNo': '32dx-003', 'Temp': 39.8, 'Shock': True, 'Sex': 2},\n    {'StudyNo': '32dx-004', 'Temp': 37.4, 'Shock': False, 'Sex': 1},\n\n    # To test warnings\n    # {'StudyNo': '32dx-004', 'Temp': 37.4, 'Shock': False, 'Sex': 3},\n    # {'StudyNo': '32dx-004', 'Temp': 37.4, 'Shock': False, 'Sex': 4}\n]\n\n# Blender template\nbt = BlenderTemplate().fit(template)\n\n# Create data\ndata = pd.DataFrame(data)\n\n# Create widgets and transform\ntrans = ReplaceWidget().fit_transform(bt, data)\n\n# Show\nprint(\"\\nOriginal:\")\nprint(data)\nprint(\"\\nTransformed:\")\nprint(trans)"
       ]
     }
   ],
