--- a/docs/_downloads/f9efac7a228b4e12fbc1761541a69b3b/plot_correction_stack.ipynb
+++ b/docs/_downloads/f9efac7a228b4e12fbc1761541a69b3b/plot_correction_stack.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Repair Stack data from .yaml\n"
+        "\n# Repair Stack data from .yaml\n\nSee :download:`corrector.yaml <./../../../examples/correctors/corrector.yaml>`.\n"
       ]
     },
     {
