--- a/docs/_downloads/8d1661b42eb2197011a6f567b872110f/plot_correction_tidy.ipynb
+++ b/docs/_downloads/8d1661b42eb2197011a6f567b872110f/plot_correction_tidy.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Repair Tidy data from .yaml\n"
+        "\n# Repair Tidy data from .yaml\n\nSee :download:`corrector.yaml <./../../../examples/correctors/corrector.yaml>`.\n"
       ]
     },
     {
